language/move-lang/tests/move_check/parser/let_binding_missing_semicolon.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/let_binding_missing_semicolon.move:4:5
  │
4 │     }
  │     ^
  │     │
  │     Unexpected '}'
  │     Expected ';'

